tests/NormalTests/paczka1/small_fuzzy/57737750.err
Error in line 1: SRsbQjQ A503 7,5
Error in line 6: 0UkYQFpzCs S352 49,9
